Trying to log weird error. (#1304)
* Trying to log weird error.

* rebasing

* Handling StackOverflowError

---------

Co-authored-by: Michael McLawhorn <mclawhor@yahooinc.com>